Fixed meeting name overlapping with mobile buttons

--- a/eduPlatform/static/conference/css/main.css
+++ b/eduPlatform/static/conference/css/main.css
@@ -313,6 +313,16 @@ body {
     text-align: center;
     margin-bottom: 10px;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.meeting-info h2 {
+    max-width: 20%;
+    height: 40px !important;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .video-grid {
